# diagramador

./: .gitignore  LICENSE  README.md  environment.yml  lais.py  requirements.txt  setup.cfg
2023/: main.py
2023/alfa_1/: alfa_1.json  alfa_1_01.md  alfa_1_02.md  alfa_1_03.md  alfa_1_04.md  alfa_1_05.md  alfa_1_06.md  alfa_1_07.md  alfa_1_08.md  alfa_1_09.md  alfa_1_10.md
2023/fis_0/: fis_0.json  fis_0_1.md  fis_0_2.md  fis_0_3.md  fis_0_4.md  fis_0_5.md
2023/mat_0/: input.json  mat_0.json  mat_0_1.md  mat_0_2.md  mat_0_3.md  mat_0_4.md  mat_0_5.md
2023/qui_0/: qui_0.json  qui_0_1.md  qui_0_2.md  qui_0_3.md  qui_0_4.md  qui_0_5.md
2023/qui_1_dis/: qui_1_dis.json  qui_1_dis_01.md  qui_1_dis_02.md  qui_1_dis_03.md  qui_1_dis_04.md  qui_1_dis_05.md  qui_1_dis_06.md  qui_1_dis_07.md  qui_1_dis_08.md  qui_1_dis_09.md  qui_1_dis_10.md
2023/qui_1_obj/: qui_1_obj.json  qui_1_obj_01.md  qui_1_obj_02.md  qui_1_obj_03.md  qui_1_obj_04.md  qui_1_obj_05.md  qui_1_obj_06.md  qui_1_obj_07.md  qui_1_obj_08.md  qui_1_obj_09.md  qui_1_obj_10.md  qui_1_obj_11.md  qui_1_obj_12.md
2023/qui_2_dis/: qui_2_dis.json  qui_2_dis_01.md  qui_2_dis_02.md  qui_2_dis_03.md  qui_2_dis_04.md  qui_2_dis_05.md  qui_2_dis_06.md  qui_2_dis_07.md  qui_2_dis_08.md  qui_2_dis_09.md  qui_2_dis_10.md
2023/qui_2_obj/: qui_2_obj.json  qui_2_obj_01.md  qui_2_obj_02.md  qui_2_obj_03.md  qui_2_obj_04.md  qui_2_obj_05.md  qui_2_obj_06.md  qui_2_obj_07.md  qui_2_obj_08.md  qui_2_obj_09.md  qui_2_obj_10.md
2023/qui_3_dis/: qui_3_dis.json  qui_3_dis_01.md  qui_3_dis_02.md  qui_3_dis_03.md  qui_3_dis_04.md  qui_3_dis_05.md  qui_3_dis_06.md  qui_3_dis_07.md  qui_3_dis_08.md  (+2 more)
database/: simulados.json
diagr/: __init__.py
legacy/: main.py  problem.py  topic.py
src/: convert.py  data.py  latex.py  main.py  problem.py  sampaio.py  topic.py
test/: config.cfg  input.json  mol.py  problema_1.md  problema_2.md  problema_3.md  problema_4.md  problema_5.md  test.json  test.py
(+253 files in other folders)
