[metadata]
name = diagramador
description = Diagramação de provas e simulados a partir de arquivos em markdown
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    diagramador
install_requires =
    black>=22
    pydantic>=1.10
    pypandoc>=1.8
    panflute>=2.3.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
