[metadata]
name = diagramador
version = attr: diagramador.VERSION
description = Diagramação de provas e simulados a partir de arquivos em markdown
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    diagramador
install_requires =
    black>=22
    Jinja2>=3.1
    rich>=13.7
    pydantic>=2.4
    pypandoc_binary>=1.12
    psycopg2-binary>=2.9
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    diagr = diagramador.bin.main:main
    diagr-create = diagramador.bin.create:create